tests/scan/fixtures/validation/negative/clean_rubygems_extconf/clean_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_gem"
  s.version = "0.1.0"
  s.summary = "Clean gem with native extension"
  s.extensions = ["ext/extconf.rb"]
  s.authors = ["Legit Author"]
end
